// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom rendering empty 1`] = `
"<table class=\\"table table-striped\\">
  <thead>
    <tr>
      <th>date</th>
      <th>message</th>
      <th>author</th>
    </tr>
  </thead>
  <tbody>
    <tr colspan=\\"3\\">
      <td>Nope, nothing to display</td>
    </tr>
  </tbody>
</table>"
`;

exports[`custom rendering with entries 1`] = `
"<table class=\\"table table-striped\\">
  <thead>
    <tr>
      <th>Foo</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>Ut molestiae aliquam tenetur est veritatis dolorum tempora. Eaque similique et qui ea consequatur illum dignissimos. Ullam qui vel qui quo. Ea dolor quasi quibusdam quia illum sunt aspernatur. Eveniet odio quos ad.</td>
    </tr>
    <tr>
      <td>Nulla natus dolores dolor. Voluptatem numquam doloribus architecto non praesentium.
        Sit facilis vitae sapiente. Placeat est qui et.</td>
    </tr>
    <tr>
      <td>Corrupti <strong>reiciendis</strong> laboriosam repellat adipisci quis.

        Iure omnis cum nihil accusantium ut doloribus nisi. Ut itaque suscipit et nulla iste enim. Assumenda quis et ullam temporibus quidem rerum nostrum. Rerum debitis quae qui ea molestiae animi minus optio.</td>
    </tr>
    <tr>
      <td></td>
    </tr>
  </tbody>
</table>"
`;

exports[`empty history 1`] = `
"<table class=\\"table table-striped\\">
  <thead>
    <tr>
      <th>date</th>
      <th>message</th>
      <th>author</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td colspan=\\"3\\">no_entry</td>
    </tr>
  </tbody>
</table>"
`;

exports[`horizontal history 1`] = `
"<table class=\\"table table-striped\\" horizontal=\\"true\\">
  <thead>
    <tr>
      <th>date</th>
      <th>message</th>
      <th>author</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>06/04/2021 16:23</td>
      <td>
        <p>Ut molestiae aliquam tenetur est veritatis dolorum tempora. Eaque similique et qui ea consequatur illum dignissimos. Ullam qui vel qui quo. Ea dolor quasi quibusdam quia illum sunt aspernatur. Eveniet odio quos ad.</p>
      </td>
      <td>John Doe</td>
    </tr>
    <tr>
      <td>03/04/2021 16:23</td>
      <td>
        <p>Nulla natus dolores dolor. Voluptatem numquam doloribus architecto non praesentium.<br>Sit facilis vitae sapiente. Placeat est qui et.</p>
      </td>
      <td>Alice Smith</td>
    </tr>
    <tr>
      <td>01/04/2021 08:23</td>
      <td>
        <p>Corrupti &lt;strong&gt;reiciendis&lt;/strong&gt; laboriosam repellat adipisci quis.</p>

        <p>Iure omnis cum nihil accusantium ut doloribus nisi. Ut itaque suscipit et nulla iste enim. Assumenda quis et ullam temporibus quidem rerum nostrum. Rerum debitis quae qui ea molestiae animi minus optio.</p>
      </td>
      <td>Bob Martin</td>
    </tr>
    <tr>
      <td>28/03/2021 10:00</td>
      <td></td>
      <td>John Doe</td>
    </tr>
  </tbody>
</table>"
`;

exports[`vertical history 1`] = `
"<table class=\\"table table-striped\\">
  <thead>
    <tr>
      <th>date</th>
      <th>message</th>
      <th>author</th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>06/04/2021 16:23</td>
      <td>
        <p>Ut molestiae aliquam tenetur est veritatis dolorum tempora. Eaque similique et qui ea consequatur illum dignissimos. Ullam qui vel qui quo. Ea dolor quasi quibusdam quia illum sunt aspernatur. Eveniet odio quos ad.</p>
      </td>
      <td>John Doe</td>
    </tr>
    <tr>
      <td>03/04/2021 16:23</td>
      <td>
        <p>Nulla natus dolores dolor. Voluptatem numquam doloribus architecto non praesentium.<br>Sit facilis vitae sapiente. Placeat est qui et.</p>
      </td>
      <td>Alice Smith</td>
    </tr>
    <tr>
      <td>01/04/2021 08:23</td>
      <td>
        <p>Corrupti &lt;strong&gt;reiciendis&lt;/strong&gt; laboriosam repellat adipisci quis.</p>

        <p>Iure omnis cum nihil accusantium ut doloribus nisi. Ut itaque suscipit et nulla iste enim. Assumenda quis et ullam temporibus quidem rerum nostrum. Rerum debitis quae qui ea molestiae animi minus optio.</p>
      </td>
      <td>Bob Martin</td>
    </tr>
    <tr>
      <td>28/03/2021 10:00</td>
      <td></td>
      <td>John Doe</td>
    </tr>
  </tbody>
</table>"
`;
